# sec-guy

./: .gitignore  LICENSE  README.md  apply_fixes.py  pyproject.toml
sec-guy/: .env.example  .gitignore  HANDOVER.md  MANIFEST.md  requirements.txt
sec-guy/docker/: Dockerfile  docker-compose.yml
sec-guy/scripts/: install.sh
sec-guy/src/: main.py
sec-guy/src/agents/: orchestrator.py  semantic_generator.py
sec-guy/src/core/: config.py  constants.py
sec-guy/src/llm/: __init__.py  lora_trainer.py
sec-guy/src/monitoring/: health_check.py
sec-guy/src/ui/: dashboard.py  wizard.py
src/: main.py
src/agents/: orchestrator.py  semantic_generator.py  vector_detector.py
src/agents/prompt_templates/: orchestrator.txt  semantic.txt  zero_hint.txt
src/core/: __init__.py  config.py  crypto_utils.py  platform.py  redis_client.py
src/guardian/src/: audit_logger.py  biometric_gate.py  legal_disclaimer.py
src/learning/: __init__.py  feedback_collector.py  neo4j_brain.py  pattern_extractor.py
src/llm/: exo_client.py  lmstudio_client.py  lora_trainer.py  model_manager.py
src/monitoring/: __init__.py  bugsink_reporter.py  health_check.py  prometheus_exporter.py
src/recovery/corruption/: exodus_parser.py  json_repair.py  version_detector.py
src/recovery/online_enrichment/: cloud_ai_client.py  cupp_wrapper.py  dehashed_client.py  hibp_client.py  online_enrichment.py
src/recovery/password/: btcrecover_path.py  (+4 more)
src/ui/: dashboard.py  tui.py  wizard.py
tests/: conftest.py  test_bip39_validator.py  test_hashcat_wrapper.py  test_imports.py  test_orchestrator.py
(+26 files in other folders)
