[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-guy"
version = "3.1.1"
description = "Data recovery framework for encrypted backups"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "SEC-GUY Contributors", email = "team@sec-guy.io"}
]
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "rich>=13.0.0",
    "textual>=0.58.0",
    "neo4j>=5.19.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "pyotp>=2.9.0",
    "mnemonic>=0.21.0",
    "ecdsa>=0.18.0",
    "PyYAML>=6.0.0",
    "json-repair>=0.9.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "leveldb>=0.20"   # optional for Authy export
]

[project.scripts]
secguy = "secguy.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["secguy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
